// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineInputText renders an input with a placeholder 1`] = `
.c1 {
  background: transparent;
  border: none;
  caret-color: #262D33;
  color: inherit;
  height: 100%;
  outline: none;
  width: 100%;
  font: inherit;
  left: 0;
  padding: 0;
  position: absolute;
  text-align: inherit;
  text-transform: inherit;
  top: 0;
}

.c1::-webkit-search-decoration,
.c1::-webkit-search-cancel-button,
.c1::-webkit-search-results-button,
.c1::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1::-webkit-input-placeholder {
  color: #939BA5;
}

.c1::-moz-placeholder {
  color: #939BA5;
}

.c1:-ms-input-placeholder {
  color: #939BA5;
}

.c1::placeholder {
  color: #939BA5;
}

.c1::-webkit-outer-spin-button,
.c1::-webkit-inner-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1[type='number'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
}

.c2 {
  color: transparent;
  line-height: inherit;
  max-width: 100%;
  overflow: hidden;
  text-align: inherit;
  white-space: pre;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 2rem;
  position: relative;
  border: none;
  border-bottom: 1px dashed;
  border-bottom-color: #C1C6CC;
  color: inherit;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

.c0:focus,
.c0:hover {
  background-color: #F5F6F7;
  border-bottom-color: #6C43E0;
  outline: none;
}

.c0:focus {
  border-bottom-style: solid;
}

<span
  className="c0"
>
  <input
    className="c1"
    onChange={[Function]}
    placeholder="this is the placeholder"
    type="text"
    value=""
  />
  <span
    className="c2"
  >
    this is the placeholder
  </span>
</span>
`;

exports[`InlineInputText renders an input with no value 1`] = `
.c1 {
  background: transparent;
  border: none;
  caret-color: #262D33;
  color: inherit;
  height: 100%;
  outline: none;
  width: 100%;
  font: inherit;
  left: 0;
  padding: 0;
  position: absolute;
  text-align: inherit;
  text-transform: inherit;
  top: 0;
}

.c1::-webkit-search-decoration,
.c1::-webkit-search-cancel-button,
.c1::-webkit-search-results-button,
.c1::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1::-webkit-input-placeholder {
  color: #939BA5;
}

.c1::-moz-placeholder {
  color: #939BA5;
}

.c1:-ms-input-placeholder {
  color: #939BA5;
}

.c1::placeholder {
  color: #939BA5;
}

.c1::-webkit-outer-spin-button,
.c1::-webkit-inner-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1[type='number'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
}

.c2 {
  color: transparent;
  line-height: inherit;
  max-width: 100%;
  overflow: hidden;
  text-align: inherit;
  white-space: pre;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 2rem;
  position: relative;
  border: none;
  border-bottom: 1px dashed;
  border-bottom-color: #C1C6CC;
  color: inherit;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

.c0:focus,
.c0:hover {
  background-color: #F5F6F7;
  border-bottom-color: #6C43E0;
  outline: none;
}

.c0:focus {
  border-bottom-style: solid;
}

<span
  className="c0"
>
  <input
    className="c1"
    onChange={[Function]}
    type="text"
    value=""
  />
  <span
    className="c2"
  >
     
  </span>
</span>
`;

exports[`InlineInputText renders an input with specific predefined value 1`] = `
.c1 {
  background: transparent;
  border: none;
  caret-color: #262D33;
  color: inherit;
  height: 100%;
  outline: none;
  width: 100%;
  font: inherit;
  left: 0;
  padding: 0;
  position: absolute;
  text-align: inherit;
  text-transform: inherit;
  top: 0;
}

.c1::-webkit-search-decoration,
.c1::-webkit-search-cancel-button,
.c1::-webkit-search-results-button,
.c1::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1::-webkit-input-placeholder {
  color: #939BA5;
}

.c1::-moz-placeholder {
  color: #939BA5;
}

.c1:-ms-input-placeholder {
  color: #939BA5;
}

.c1::placeholder {
  color: #939BA5;
}

.c1::-webkit-outer-spin-button,
.c1::-webkit-inner-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1[type='number'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
}

.c2 {
  color: transparent;
  line-height: inherit;
  max-width: 100%;
  overflow: hidden;
  text-align: inherit;
  white-space: pre;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 2rem;
  position: relative;
  border: none;
  border-bottom: 1px dashed;
  border-bottom-color: #C1C6CC;
  color: inherit;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: inherit;
}

.c0:focus,
.c0:hover {
  background-color: #F5F6F7;
  border-bottom-color: #6C43E0;
  outline: none;
}

.c0:focus {
  border-bottom-style: solid;
}

<span
  className="c0"
>
  <input
    className="c1"
    onChange={[Function]}
    type="text"
    value="type here..."
  />
  <span
    className="c2"
  >
    type here...
  </span>
</span>
`;
